--- a/templates/courier.html
+++ b/templates/courier.html
@@ -17,17 +17,17 @@
         <thead><tr><th></th><th>№</th><th>Адрес</th><th class="text-center">Статус</th><th class="text-center">Действия</th></tr></thead>
         <tbody id="ordersBody">
         {% for o in orders %}
-          <tr data-id="{{ o.id }}">
+          <tr data-id="{{ o.id }}" data-status="{{ o.status }}">
             <td>
-              {% if o.status == 'prepared' %}
-              <input type="checkbox" class="form-check-input order-check">
+              {% if o.status == 'Подготовлен к доставке' %}
+              <button class="btn btn-sm btn-primary take-btn">Принять в работу</button>
               {% endif %}
             </td>
             <td>{{ o.order_number }}</td>
             <td>{{ o.address }}</td>
             <td class="status-cell">{{ o.status }}</td>
             <td class="actions">
-              {% if o.status == 'out_for_delivery' %}
+              {% if o.status == 'Выдано на доставку' %}
               <button class="btn btn-sm btn-success deliver-btn">Доставлен</button>
               {% endif %}
             </td>
@@ -36,7 +36,6 @@
         </tbody>
       </table>
     </div>
-    <button id="takeBtn" class="btn btn-primary mt-2">Взять в работу</button>
   </div>
   <div class="tab-pane fade" id="tabMap" role="tabpanel">
     <div id="courierMap" style="width:100%;height:400px;"></div>
